Fixed contract address word wrap issue.

--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -32,15 +32,17 @@
   margin-bottom: 20px;
   color: white;
   font-size: 3rem;
-  /*font-weight: 500;*/
   text-transform: uppercase;
 }
 
 .infos p {
   color: white;
-  /*width: 718px;*/
   font-size: 30px;
   max-width: 678px;
+}
+
+.infos p {
+  overflow-wrap: break-word;
 }
 
 .charts {
@@ -142,11 +144,7 @@
     font-size: 2rem;
   }
 
-  .infos p:not(.ca) {
+  .infos p {
     font-size: 18px;
-  }
-
-  .infos .ca {
-    font-size: 12px;
   }
 }
